# pi-pico-examples

./: .gitignore  README.md  rust-toolchain.toml
.cargo/: config.toml
from-scratch/: Cargo.toml  README.md  link.ld
from-scratch/.cargo/: config.toml
from-scratch/src/: main.rs
getting-started/: Cargo.toml  README.md  build.rs
getting-started/src/: main.rs
